Fix table size on mobiles

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -516,7 +516,6 @@ blockquote {
 }
 
 table {
-  min-width: 700px;
   margin-top: var(--third-padding);
 
   table-layout: fixed;
